# sentencepiece_merger

./: README.md  pyproject.toml  sentencepiece_merger.py  show_model.py
data/: botchan.model
