[tool.poetry]
name = "sentencepiece-merger"
version = "0.1.0"
description = "Merge 2 sentencepiece models"
authors = ["Naoyoshi Aikawa <n.aikawa91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
